--- a/sample_scripts/bellabeat_starter_example.Rmd
+++ b/sample_scripts/bellabeat_starter_example.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Example Starter R Script"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ## Introduction and background
